Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-5937

'lfs find --size ...' fails to detect striped directories above a given size

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Major Major
    • Lustre 2.8.0
    • Lustre 2.7.0
    • 3
    • 16576

      The supporting code for lfs find implicitly assumes a regular file in a few places. See the LL_IOC_LOV_GETSTRIPE, LL_IOC_MDC_GETINFO, IOC_MDC_GETFILEINFO, IOC_MDC_GETFILESTRIPE case of ll_dir_ioctl() where we return the attributes of the master inode

      q:lustre# mkdir d0
      q:lustre# lfs mkdir -c4 d1
      q:lustre# touch d0/f{0..4095} d1/f{0..4095}
      q:lustre# stat d0 d1
        File: `d0'
        Size: 184320    	Blocks: 368        IO Block: 4096   directory
      Device: 2c54f966h/743766374d	Inode: 180144002274699275  Links: 2
      Access: (0755/drwxr-xr-x)  Uid: (    0/    root)   Gid: (    0/    root)
      Access: 2014-11-19 11:19:46.000000000 -0600
      Modify: 2014-11-19 11:20:24.000000000 -0600
      Change: 2014-11-19 11:20:24.000000000 -0600
        File: `d1'
        Size: 212992    	Blocks: 8          IO Block: 4096   directory
      Device: 2c54f966h/743766374d	Inode: 180144002274699276  Links: 2
      Access: (0755/drwxr-xr-x)  Uid: (    0/    root)   Gid: (    0/    root)
      Access: 2014-11-19 11:19:53.000000000 -0600
      Modify: 2014-11-19 11:20:37.000000000 -0600
      Change: 2014-11-19 11:20:37.000000000 -0600
      q:lustre# lfs find --size +1K .
      .
      ./d0
      ./d1
      q:lustre# lfs find --size +4K .
      ./d0
      

            jhammond John Hammond
            jhammond John Hammond
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: