LU-5937 llite: merge attr for striped dir in dir_ioctl

In ll_dir_ioctl (LL_IOC_MDC_GETINFO), if the inode is
a striped directory, it should merged the attributes
from all of stripes. So lfs find --size can get correct
result.

Remove some unnecesary merging in revalidate_slave, and
the attributes will be stored in each stripes, only
merging them if required.

Change-Id: I5b3b261d2798ab06226b28958a46e5c670e7e42a
Signed-off-by: Wang Di <di.wang@intel.com>